connect to mongoatlas

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-
-    "test": "nodemon src/index.js"
+     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "purvbhuva",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1"
   }
 }
